# AutoDocument

./: .gitignore  Dockerfile  README.md  alembic.ini  build.docker-compose.yaml  build.sh  docker-compose.yaml  entrypoint.sh  package.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4dd3f9030cea_polymorphic_source_refactor.py  63915fea6ce7_squash_source_types.py  677c2930c1d7_rename_outcometype_html_to_text.py  a61f1aa5e0bd_.py  e3280edb70e5_add_failurereasons_column_to_.py  f39de612b9e8_baseline.py
autodoc/: __init__.py  config.py  containers.py  db.py  metasource.py  orm.py.bak  pre_run.py  tasks.py
autodoc/data/: __init__.py  base.py  initialise.py  manager.py  models.output  models.py.bak  notes.txt  repositories.py  services.py  session.py  tables.py  views.py
autodoc/file_access/: __init__.py  file_access.py  file_details.py  linux.py  s3.py  sharepoint.py  windows.py
autodoc/outcome/: __init__.py  docx_service.py  download_container.py  html_outcome.py  outcome.py  pdf_outcome.py  text_outcome.py  word_outcome.py
autodoc/source/: __init__.py  csv_source.py  excel_source.py  form_source.py  llm_source.py  source.py  sql_source.py
autodoc/storage_service/: __init__.py  base.py  dropbox.py  file_details.py  linux.py  s3.py  sharepoint.py  windows.py
autodoc/workflow/: __init__.py  archiver.py  event_logger.py  outcome_processor.py  outcome_service_factory.py  source_loader.py  source_service_factory.py  workflow.py  workflow_factory.py
dashboard/: __init__.py  app.py  constants.py  database.py
dashboard/blueprints/: __init__.py
dashboard/blueprints/auth/: __init__.py  controllers.py
dashboard/blueprints/card/: __init__.py  controllers.py
dashboard/blueprints/meta/: __init__.py  controllers.py  database.py  filesystem.py  forms.py  llm.py  s3.py  sharepoint.py
dashboard/blueprints/top/: __init__.py  models.py
dashboard/blueprints/top/controllers/: __init__.py
dashboard/blueprints/top/forms/: __init__.py  csv.py  dynamic.py  excel.py  (+10 more)
dashboard/files/: input.html
dashboard/files/download/: output.html
dashboard/static/: output.css
dashboard/templates/auth/: login.html
dashboard/templates/components/: add_database_form.html  add_linux_fs_form.html  add_llm_form.html  add_menu.html  add_outcome_table.html  add_posix_fs_form.html  add_s3_form.html  add_sharepoint_form.html  add_source_table.html  add_windows_fs_form.html  alerts.html  dynamic_file_access_form.html  dynamic_output_file_access_form.html  filesystems_table.html  form_fields_table.html  head.html  instances_table.html  llm_table.html  metadatabases_table.html  outcomes_status.html  outcomes_table.html  s3_table.html  sharepoint_table.html  side-menu.html  sources_status.html  sources_table.html  splitter.html  useful.html  windows_filesystems_table.html  workflow_diagram.html  workflows_table.html
dashboard/templates/macros/: alert.html  form.html  workflow_diagram.html
dashboard/templates/meta/: connection_string.html  database.html  file_system.html  file_system_linux.html  file_system_windows.html  index-bak.html  index.html  llm.html  meta_template.html  s3.html  sharepoint.html
dashboard/templates/svg/: construction.html  cpu.html  csv.html  database.html  excel.html  field.html  html.html  important.html  llm.html  mexcel.html  mpdf.html  mpdf_path.html  mword.html  mword_path.html  pdf.html  question.html  record.html  splitter.html  transpose.html  word.html
dashboard/templates/top/: add_form_field_source.html  add_outcome.html  add_outcome_layout.html  add_source.html  add_source_layout.html  edit_outcome.html  edit_source.html  index.html  index2.html  instance_review.html  layout.html  workflow.html  workflow_instance.html
docs/: databases.md  deployment.md  file_storages.md  index.md  llm.md  outcomes.md  sources.md  tailwind.config.js  templating.md  tutorials.md  tutorials.md.bak
docs/app/: app.py
docs/app/blueprints/: __init__.py  controllers.py
docs/app/static/: output.css
docs/app/templates/: databases.html  file_storages.html  index.html  outcomes.html  side-menu.html  sources.html  templating.html
init/: initial_database.db
tests/alembic/: test_polymorphic_source_refactor.py  test_setup.py  test_squash_source_types.py
tests/autodoc/: conftest.py
tests/autodoc/workflow/: test_archiver.py  test_outcome_processor.py  test_outcome_service_factory.py  test_source_loader.py  test_source_service_factory.py  test_workflow_factory.py  test_workflow_runner.py
worker/: Dockerfile  requirements.txt
(+77 files in other folders)
