[project]
name = "AutoDocument"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "boto3>=1.34",
    "cryptography>=43",
    "docx-mailmerge>=0.5.0",
    "docxtpl>=0.20",
    "dramatiq-workflow>=0.3.0",
    "dramatiq[redis,watch]>=1.18.0",
    "dropbox>=12.0.2",
    "flask>=3.0.3",
    "flask-login>=0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "gunicorn>=23",
    "inotify>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-cohere>=0.4",
    "langchain-deepseek>=0.1",
    "langchain-google-genai>=2.1",
    "langchain-google-vertexai>=2.1",
    "langchain-groq>=0.3",
    "langchain-mistralai>=0.2",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "loguru>=0.7",
    "mysql-connector-python>=9.0",
    "office365-rest-python-client>=2.5",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pendulum>=3",
    "pillow>=12.1",
    "pillow-avif-plugin>=1.5",
    "pillow-heif>=1.2",
    "psycopg2-binary>=2",
    "pymysql>=1.1",
    "pyodbc>=5.1",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "time-machine>=2.14",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "D", "W", "B", "C90"]
lint.ignore = ["D212", "D203"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ty.rules]
possibly-unresolved-reference = "error"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-alembic>=0.12.1",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-p no:langsmith -p no:pytest_langsmith -p no:langsmith_plugin"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autodoc"]



# [tool.mypy]
# disallow_untyped_defs = true
# ignore_missing_imports = true
